js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-braceless-import-call-unknown.js
DONOTEVALUATE
(
)
;
if
(
true
)
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
